# rust_llama_app

./: .lvimrc  Cargo.toml  README.md  index.html
.github/workflows/: release.yml
src/: api.rs  app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: bot.rs  main.rs
src/app/: chat.rs  mod.rs
