[package]
name = "rust_llama_app-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
stylist = { version = "0.12", features = ["yew_use_style"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"

[workspace]
members = ["src-tauri"]

[package.metadata.cargo-machete]
ignored = ["js-sys"]

# https://yew.rs/docs/advanced-topics/optimizations#cargotoml
[profile.release]
panic = 'abort' # less code to include into binary
codegen-units = 1 # optimization over all codebase ( better optimization, slower build )
opt-level = 's' # optimization for size
lto = true # link time optimization using using whole-program analysis
