[package]
name = "rust_llama_app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "dialog-all", "fs-exists", "fs-read-file"] }
rand = "0.8.5"
# to allow ggml v3
llm = { git = "https://github.com/rustformers/llm" , rev="693e6c9a63160f5c24724ffc77bafa974dda3229" }

[profile.dev.package.ggml-sys]
opt-level = 3

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
